<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddContact" >
    
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/add_contact"/>
	
	    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp" >
        
	        <ImageView
	            android:id="@+id/addContact_image"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:src="@drawable/defaultimage"
	            android:contentDescription="@string/hello_world" />
	        
        </FrameLayout>
	
    <EditText
        android:id="@+id/addContact_firstName"
        android:hint="@string/editContact_firstName"
        android:inputType="textPersonName"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/addContact_lastName"
        android:hint="@string/editContact_lastName"
        android:inputType="textPersonName"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/addContact_mobilePhone"
        android:hint="@string/editContact_mobilePhone"
        android:inputType="phone"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/addContact_homePhone"
        android:hint="@string/editContact_homePhone"
        android:inputType="phone"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/addContact_workPhone"
        android:hint="@string/editContact_workPhone"
        android:inputType="phone"
        android:digits="true"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/addContact_email"
        android:hint="@string/editContact_email"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/addContact_address"
        android:hint="@string/editContact_address"
        android:inputType="textPostalAddress"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/addContact_dateOfBirth"
        android:hint="@string/editContact_dateOfBirth"
        android:inputType="date"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        
        <Button 
            android:id="@+id/addContact_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editContact_button_save"
            style="?android:attr/buttonBarButtonStyle" />
        
        <Button 
            android:id="@+id/addContact_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editContact_button_cancel"
            style="?android:attr/buttonBarButtonStyle" />
        
    </LinearLayout>
        
</LinearLayout>