<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditContact" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/editButton" />

    <ImageView
        android:id="@+id/editContact_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/hello_world" />

    <EditText
        android:id="@+id/editContact_firstName"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/editContact_firstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editContact_lastName"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/editContact_lastName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editContact_mobilePhone"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/editContact_mobilePhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editContact_homePhone"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/editContact_homePhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editContact_workPhone"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:digits="true"
        android:hint="@string/editContact_workPhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editContact_email"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/editContact_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editContact_address"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/editContact_address"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/editContact_dateOfBirth"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/editContact_dateOfBirth"
        android:inputType="date" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/editContact_button_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editContact_button_save" />

        <Button
            android:id="@+id/editContact_button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editContact_button_cancel" />
    </LinearLayout>

</LinearLayout>